--- a/finalproject.css
+++ b/finalproject.css
@@ -2,6 +2,12 @@
  width: device-width;
 }
 
+body {
+background-image: url("images/LogoWhippoorwillBookClub.png");
+background-repeat: repeat;
+background-color: white;
+}
+
 /*page header*/ 
 h1#midtermsite-title {
  color: blue;
