--- a/finalproject.css
+++ b/finalproject.css
@@ -3,7 +3,7 @@
 }
 
 body {
- background-image: url("images/CloudBackground.png");
+ background-image: url("images/CloudBackground.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
