--- a/finalproject.css
+++ b/finalproject.css
@@ -4,8 +4,8 @@
 
 body {
  background-image: url("images/CloudBackground.jpg");
- background-size: cover;
- background-position: center;
+ /*background-size: cover;
+ background-position: center;*/
  background-repeat: no-repeat;
  background-color: #white;
 }
