--- a/finalproject.css
+++ b/finalproject.css
@@ -4,7 +4,7 @@
 
 body {
  background-image: url("images/CloudBackground1.jpg");
- /*background-size: cover;*/
+ background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: #white;
