--- a/finalproject.css
+++ b/finalproject.css
@@ -32,7 +32,7 @@ h2#midtermsite-subtitle {
  }
 
 figure.LogoWBC img {
- float: right;
+ /*float: right;*/
  max-width: 10%;
  height: auto;
  margin-left: 25px;
