--- a/finalproject.css
+++ b/finalproject.css
@@ -32,7 +32,7 @@ h2#midtermsite-subtitle {
  }
 
 .header img {
-  float: right;
+  /*float: right;*/
   width: 100px;
   height: 100px;
   background: #555;
