--- a/finalproject.css
+++ b/finalproject.css
@@ -72,11 +72,23 @@ figure.main-catandbooks img {
 
 figure.CirceDustJacket img {
   float: right;
-  max-width: 25%;
+  max-width: 15%;
   height: auto;
   margin-left: 30px;
-  margin-right: 40px;
-  margin-top: 50px;
+  margin-right: 50px;
+  margin-top: 10px;
+  margin-bottom: 35px;
+  /*border: 3px solid black; design choice to remove*/
+  padding: 5px;
+}
+
+figure.LessonsDustJacket img {
+  float: right;
+  max-width: 15%;
+  height: auto;
+  margin-left: 30px;
+  margin-right: 50px;
+  margin-top: 10px;
   margin-bottom: 35px;
   /*border: 3px solid black; design choice to remove*/
   padding: 5px;
