--- a/finalproject.css
+++ b/finalproject.css
@@ -11,7 +11,7 @@ body {
 }
 
 /*page header*/ 
-h1#midtermsite-title {
+h1#page-title {
  color: blue;
  font-family: Calibri;
  font-size: 50px;
@@ -21,7 +21,7 @@ h1#midtermsite-title {
  margin-bottom: 5px;
  }
 
-h2#midtermsite-subtitle {
+h2#page-subtitle {
  color: green;
  font-family: Kristen ITC; /*this font mimics the FOPAL fun logo*/
  font-size: 25px;
