--- a/finalproject.css
+++ b/finalproject.css
@@ -12,7 +12,7 @@ body {
 
 /*page header*/ 
 h1#page-title {
- color: blue;
+ color: #778899;
  font-family: Calibri;
  font-size: 50px;
  font-style: italic;
@@ -22,8 +22,8 @@ h1#page-title {
  }
 
 h2#page-subtitle {
- color: green;
- font-family: Kristen ITC; /*this font mimics the FOPAL fun logo*/
+ color: #008B8B;
+ font-family: Kristen ITC; /*this is a fun font*/
  font-size: 25px;
  font-style: italic;
  width: 75%;
