--- a/finalproject.css
+++ b/finalproject.css
@@ -12,7 +12,7 @@ body {
 
 /*page header*/ 
 h1#page-title {
- color: #2F4F4F;
+ color: #00008B;
  font-family: Calibri;
  font-size: 50px;
  font-style: italic;
