--- a/finalproject.css
+++ b/finalproject.css
@@ -11,7 +11,7 @@ body {
 }
 
 /*page header*/ 
-h1#page-title {
+h1#mainpage-title, h1#aboutpage-title {
  color: #00008B;
  font-family: Calibri;
  font-size: 50px;
