--- a/finalproject.css
+++ b/finalproject.css
@@ -11,7 +11,7 @@ body {
 }
 
 /*page header*/ 
-h1#mainpage-title, h1#aboutpage-title {
+h1#mainpage-title {
  color: #00008B;
  font-family: Calibri;
  font-size: 50px;
@@ -32,10 +32,16 @@ h2#page-subtitle {
  }
 
 .header img {
-  /*float: right;*/
+  float: left;
   width: 100px;
   height: 100px;
   background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
 }
 
 /*figure.LogoWBC img {
