--- a/finalproject.css
+++ b/finalproject.css
@@ -21,7 +21,16 @@ h1#mainpage-title {
  margin-bottom: 5px;
  }
 
-h1#aboutpage-title {
+h1#mainpage-title img {
+ /*float: right;*/
+ max-width: 7%;
+ height: auto;
+ margin-left: 25px;
+ margin-right: 25px;
+ padding: 0px;
+}
+
+h1#aboutuspage-title {
  color: #00008B;
  font-family: Calibri;
  font-size: 50px;
@@ -30,6 +39,15 @@ h1#aboutpage-title {
  text-align: center;
  margin-bottom: 5px;
  }
+
+h1#aboutuspage-title img {
+ /*float: right;*/
+ max-width: 7%;
+ height: auto;
+ margin-left: 25px;
+ margin-right: 25px;
+ padding: 0px;
+}
 
 h1#greatestpage-title {
  color: #00008B;
@@ -41,6 +59,15 @@ h1#greatestpage-title {
  margin-bottom: 5px;
  }
 
+h1#greatestpage-title img {
+ /*float: right;*/
+ max-width: 7%;
+ height: auto;
+ margin-left: 25px;
+ margin-right: 25px;
+ padding: 0px;
+}
+
 h1#obocpage-title {
  color: #00008B;
  font-family: Calibri;
@@ -51,11 +78,12 @@ h1#obocpage-title {
  margin-bottom: 5px;
  }
 
-h1#mainpage-title img {
+h1#obocpage-title img {
  /*float: right;*/
  max-width: 7%;
  height: auto;
  margin-left: 25px;
+ margin-right: 25px;
  padding: 0px;
 }
 
