--- a/finalproject.css
+++ b/finalproject.css
@@ -131,11 +131,11 @@ animation-iteration-count: infinite;
 
 figure.header-catandbooks img {
  float: right;
- max-width: 30%;
+ max-width: 25%;
  height: auto;
  margin-left: 30px; /*35%*/
  margin-top: 0px;
- margin-right: 40px;
+ margin-right: 100px;
  margin-bottom: 50px;
  /*border: 3px solid black; design choice to remove*/
  padding: 5px;
@@ -209,7 +209,7 @@ figure.littlewomenfilm img {
   margin-right: 100px;
   margin-top: 10px;
   margin-bottom: 35px;
-  /*border: 3px solid black; design choice to remove*/
+  border: 3px solid black;
   padding: 5px;
 }
 
@@ -260,7 +260,6 @@ header p {
  font-family: Calibri;
  font-size: 20px;
  width: 75%;
- /*background: lightyellow;*/
  margin-top: 15px;
  /*margin-left: 35px;*/
  /*text-align: left;*/
@@ -270,7 +269,6 @@ p {
   font-family: Calibri;
   font-size: 20px;
   width: 75%;
-  /*background: lightyellow;*/
   margin-top: 15px;
 }
 
