--- a/finalproject.css
+++ b/finalproject.css
@@ -10,6 +10,11 @@ body {
  background-color: #white;
 }
 
+.tab {
+  display: inline-block;
+  width: 2em;
+}
+
 /*page header*/ 
 h1#mainpage-title {
  color: #00008B;
