--- a/finalproject.css
+++ b/finalproject.css
@@ -285,7 +285,7 @@ p {
  justify-content: flex-start;
  gap: 60px;
  font-weight: bold;
- background-color: #f8f8ff /*ghost white*/ /*#fffcc4 yellow;*/ /*#fffab1; not sure*/
+ background-color: #f8f8ff; /*ghost white*/ /*#fffcc4 yellow;*/ /*#fffab1; not sure*/
  list-style: none;
  padding: 0;
  border-top: 2px solid black;
