--- a/finalproject.css
+++ b/finalproject.css
@@ -83,10 +83,10 @@ h2#page-subtitle {
         align-items: left;
         gap: 20px;                   /* Space between items */
         max-width: 900px;
-        margin: auto;                /* Center container */
+        margin: left;                /* auto Center container */
         padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
+        /*border: 1px solid #ccc;
+        border-radius: 8px;*/
         /*background-color: #f9f9f9;*/
     }
 
@@ -96,15 +96,17 @@ h2#page-subtitle {
         height: auto;
         border-radius: 8px;
         flex: 1 1 300px; /* Flexible width, min 300px */
+        float: right; 
     }
 
     /* Text styling */
     .text-content {
         flex: 1 1 300px;
         font-family: Calibri;
+        float: left;
     }
 
-    .text-content h2 {
+    /*.text-content h2 {
         margin-top: 0;
         color: #333;
     }
@@ -112,7 +114,7 @@ h2#page-subtitle {
     .text-content p {
         line-height: 1.6;
         color: #555;
-    }
+    }*/
 
 /*experimenting with text animation*/
 @keyframes colorChange {
