--- a/finalproject.css
+++ b/finalproject.css
@@ -82,7 +82,7 @@ h2#page-subtitle {
         flex-wrap: wrap;             /* Wrap on smaller screens */
         align-items: left;
         gap: 20px;                   /* Space between items */
-        max-width: 900px;
+        max-width: 75% /*900px;*/
         margin: left;                /* auto Center container */
         padding: 20px;
         /*border: 1px solid #ccc;
