--- a/finalproject.css
+++ b/finalproject.css
@@ -205,7 +205,7 @@ figure.KavClayDustJacket img {
   padding: 0px;
 }
 
-figure.LessonsDustJacket img {
+/*figure.LessonsDustJacket img {
   float: right;
   max-width: 12%;
   height: auto;
@@ -215,7 +215,7 @@ figure.LessonsDustJacket img {
   margin-bottom: 35px;
   border: 2px solid black;
   padding: 0px;
-}
+}*/
 
 figure.header-helloB img {
   float: right;
