--- a/finalproject.css
+++ b/finalproject.css
@@ -78,10 +78,10 @@ h2#page-subtitle {
 
 /* General container styling */
     .container {
-        display: flex;               /* Arrange items side-by-side */
-        flex-wrap: wrap;             /* Wrap on smaller screens */
+        display: flex;               
+        flex-wrap: wrap;             
         align-items: flex-start;
-        gap: 0px;                   /* Space between items */
+        gap: 0px;                 
         max-width: 80% /*900px;*/
         /*margin: left; text picks up p styling?*/        
         padding: 0px;
@@ -92,11 +92,11 @@ h2#page-subtitle {
 
     /* Image styling */
     .container img {
-        max-width: 50%;
+        max-width: 40%;
         height: auto;
         border-radius: 5px;
         flex: 1 1 300px; /* Flexible width, min 300px */
-        float: left;
+        /*float: left;*/
         border: 2px solid black;
         margin: 0;
     }
