--- a/finalproject.css
+++ b/finalproject.css
@@ -112,12 +112,13 @@ h2#page-subtitle {
     /*.text-content h2 {
         margin-top: 0;
         color: #333;
-    }
+    }*/
 
     .text-content p {
-        line-height: 1.6;
-        color: #555;
-    }*/
+        width: auto;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
 
 /*experimenting with text animation*/
 @keyframes colorChange {
