--- a/finalproject.css
+++ b/finalproject.css
@@ -186,7 +186,7 @@ figure.dogreadingbook img {
   padding: 0px;
 }
 
-figure.CirceDustJacket img {
+/*figure.CirceDustJacket img {
   float: right;
   max-width: 12%;
   height: auto;
@@ -196,7 +196,7 @@ figure.CirceDustJacket img {
   margin-bottom: 35px;
   border: 2px solid black;
   padding: 0px;
-}
+}*/
 
 figure.KavClayDustJacket img {
   /*float: right;*/
