--- a/finalproject.css
+++ b/finalproject.css
@@ -87,8 +87,8 @@ h2#page-subtitle {
         margin: 0px;         
         padding: 0px;
         border: 1px solid #ccc
-        border-radius: 8px;*/
-        /*background-color: #f9f9f9;*/
+        border-radius: 8px;
+        background-color: #f9f9f9;
     }
 
     /* Image styling */
