--- a/finalproject.css
+++ b/finalproject.css
@@ -82,7 +82,7 @@ h2#page-subtitle {
         flex-wrap: wrap;             
         align-items: flex-start;
         gap: 0px;                 
-        max-width: 900px;
+        max-width: 75%;
         margin-left: 40px;
         margin: 0px;         
         padding: 0px;
@@ -118,7 +118,7 @@ h2#page-subtitle {
     .text-content p {
         width: auto;
         margin-top: 0px;
-        /*margin-left: 40px;*/
+        margin-left: 0px;
     }
 
 /*experimenting with text animation*/
