--- a/finalproject.css
+++ b/finalproject.css
@@ -83,7 +83,7 @@ h2#page-subtitle {
         align-items: flex-start;
         gap: 5px;                 
         max-width: 75%;
-        margin-left: 40px;
+        /*margin-left: 40px;*/
         margin: 0 auto;         
         padding: 0;
         border: 1px solid #ccc
