--- a/finalproject.css
+++ b/finalproject.css
@@ -82,9 +82,9 @@ h2#page-subtitle {
         flex-wrap: wrap;             
         align-items: flex-start;
         gap: 5px;                 
-        max-width: 75%;
+        max-width: 90%;
         /*margin-left: 40px;*/
-        margin: 0 auto;         
+        margin: 0 /*auto;*/         
         padding: 0;
         border: 1px solid #ccc
         border-radius: 8px;
